# openlp

./: .bzrignore  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.rst  MANIFEST.in  README-int.md  README.rst  appveyor.yml  copyright.txt  eslint.config.mjs  karma.conf.js  nose2.cfg  openlp.prof  openlp.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  run_openlp.py  setup.cfg  setup.py  song_index.csv  temp.py  tmp
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.devcontainer/ubuntu-24.04/: Dockerfile  README.md  bootstrap.sh  devcontainer.json
.devcontainer/windows-on-linux/: Dockerfile  devcontainer.json  post_create.sh
.github/: copilot-instructions.md
documentation/: PJLink_Notes.odt  openlp.1
openlp/: .version  __init__.py  __main__.py
openlp/core/: __init__.py  app.py  loader.py  resources.py  server.py  state.py  threading.py  version.py
openlp/core/api/: __init__.py  apicontroller.py  apitab.py  controller.py  coreendpoints.py  deploy.py  endpoint.py  http.py  httprouter.py  httpserver.py  lib.py  main.py  poll.py  tab.py  uiinterfaces.py  websockets.py  websocketspoll.py  wsserver.py  zeroconf.py
openlp/core/common/: __init__.py  actions.py  applocation.py  db.py  enum.py  handlers.py  httputils.py  i18n.py  json.py  languagemanager.py  languages.py  mime.py  mixins.py  openlpmixin.py  path.py  platform.py  registry.py  registrymixin.py  registryproperties.py  settings.py  uistrings.py  utils.py  versionchecker.py
openlp/core/db/: __init__.py  helpers.py  manager.py  mixins.py  types.py  upgrades.py
openlp/core/display/: __init__.py  canvas.py  render.py  renderer.py  screens.py  webengine.py  window.py
openlp/core/lib/: __init__.py  db.py  exceptions.py  filedialog.py  filelock.py  formattingtags.py  htmlbuilder.py  imagemanager.py  mediamanageritem.py  path.py  plugin.py  pluginmanager.py  renderer.py  screen.py  searchedit.py  serviceitem.py  settingstab.py  shutil.py  theme.py  ui.py
openlp/core/pages/: __init__.py  alignment.py  areaposition.py  background.py  fontselect.py
openlp/core/projectors/: __init__.py  constants.py  db.py  editform.py  manager.py  pjlink.py  pjlinkcommands.py  sourceselectform.py  tab.py  upgrade.py
openlp/core/ui/: __init__.py  aboutdialog.py  aboutform.py  advancedtab.py  confirmationdialog.py  confirmationform.py  dark.py  exceptiondialog.py  exceptionform.py  filerenamedialog.py  filerenameform.py  firsttimeform.py  firsttimelanguagedialog.py  firsttimelanguageform.py  firsttimewizard.py  folders.py  formattingtagcontroller.py  formattingtagdialog.py  formattingtagform.py  generaltab.py  icons.py  library.py  maindisplay.py  mainwindow.py  plugindialog.py  pluginform.py  printservicedialog.py  printserviceform.py  screenstab.py  serviceitemeditdialog.py  serviceitemeditform.py  servicemanager.py  servicenoteform.py  servicetab.py  settingsdialog.py  settingsform.py  shortcutlistdialog.py  shortcutlistform.py  slidecontroller.py  splashscreen.py  (+11 more)
openlp/core/widgets/: buttons.py  comboboxes.py  dialogs.py  docks.py  edits.py  enums.py  labels.py  layouts.py  toolbar.py  views.py  widgets.py  wizard.py
openlp/plugins/: __init__.py
openlp/plugins/alerts/: __init__.py  alertsplugin.py  endpoint.py  remote.py
openlp/plugins/bibles/: __init__.py  bibleplugin.py  endpoint.py  remote.py
openlp/plugins/custom/: __init__.py  customplugin.py  endpoint.py  remote.py
openlp/plugins/images/: __init__.py  endpoint.py  imageplugin.py  remote.py
openlp/plugins/media/: __init__.py  endpoint.py  mediaplugin.py  remote.py
openlp/plugins/obs_studio/: __init__.py  obs_studio_plugin.py
openlp/plugins/planningcenter/: __init__.py  planningcenterplugin.py
openlp/plugins/presentations/: __init__.py  endpoint.py  presentationplugin.py  remote.py
openlp/plugins/remotes/: __init__.py  deploy.py  endpoint.py  remoteplugin.py
openlp/plugins/songs/: __init__.py  endpoint.py  remote.py  reporting.py  songsplugin.py
openlp/plugins/songusage/: __init__.py  songusageplugin.py
resources/: hints.tag
resources/forms/: about.ui  exceptiondialog.ui  firsttimewizard.ui  songmaintenance.ui  themeprogressdialog.ui  themewizard.ui
resources/i18n/: af.qm  af.ts  bg.qm  bg.ts  cs.qm  cs.ts  da.qm  da.ts  de.qm  de.ts  el.qm  el.ts  en.ts  en_GB.qm  en_GB.ts  en_ZA.qm  en_ZA.ts  es.qm  es.ts  es_CL.ts  et.qm  et.ts  fi.qm  fi.ts  fr.qm  fr.ts  hu.qm  hu.ts  id.qm  id.ts  it.qm  it.ts  it_CH.ts  it_IT.qm  it_IT.ts  ja.qm  ja.ts  ko.qm  ko.ts  lt.qm  (+28 more)
resources/images/: openlp-2.qrc
scripts/: appveyor-webhook.py  appveyor.yml  build_source_release.py  build_windows_wine.py  check-i18n.py  check_dependencies.py  clean_up_resources.py  ensure_icu_prereqs.py  generate_resources.sh  generate_translations.sh  gitlab_ci_local.py  jenkins_script.py  lp-merge.py  mp_update.py  openlp_windows.spec  pull_translations  push_translations  resources.arm64.patch  resources.patch  reveal-js.patch  translation_head.txt  translation_merge.py  translation_raw_generate.sh  translation_tail.txt  translation_utils.py  upload-build.py  websocket_client.py
scripts/.tx/: config
tests/: README.rst  README.txt  __init__.py  conftest.py
tests/functional/: __init__.py  test_init.py
tests/functional/openlp_core/: __init__.py  test_app.py  test_init.py  test_server.py  test_state.py  test_threading.py  test_version.py
tests/functional/openlp_core_api/: test_apicontroller.py  test_apitab.py  test_controller.py  test_deploy.py  test_error.py  test_http.py  test_httpserver.py  test_poll.py  test_tab.py  test_websockets.py  (+1 more)
tests/helpers/: __init__.py  projector.py  songfileimport.py  testmixin.py
tests/interfaces/: __init__.py
tests/js/: fake_webchannel.js  polyfill.js  test_display.js  test_display_init.js
tests/openlp_core/: __init__.py  test_app.py  test_loader.py  test_main.py  test_server.py  test_state.py  test_threading.py  test_version.py
tests/utils/: __init__.py  constants.py  osdinteraction.py  test_bzr_tags.py  test_git_tags.py  test_pylint.py
(+950 files in other folders)
