[build-system]
requires = ['poetry-core (>=2.0,<3.0)']
build-backend = "poetry.core.masonry.api"

[tool.poetry]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Religion",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: Afrikaans",
    "Natural Language :: Dutch",
    "Natural Language :: English",
    "Natural Language :: French",
    "Natural Language :: German",
    "Natural Language :: Hungarian",
    "Natural Language :: Indonesian",
    "Natural Language :: Japanese",
    "Natural Language :: Norwegian",
    "Natural Language :: Portuguese (Brazilian)",
    "Natural Language :: Russian",
    "Natural Language :: Swedish",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: Gnome",
    "Topic :: Desktop Environment :: K Desktop Environment (KDE)",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Religion",
]
packages = [
    { include = "openlp" },
]
include = [
    "openlp/**/*",
]
exclude = [
    "tests*",
    "ez_setup",
]
requires-poetry = '>=2.0,<3.0'

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-qt = "*"
flake8 = "*"
pytest-cov = "^6.2.1"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
# Flake8 configuration
[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".venv",
    "venv",
    "build",
    "dist",
]

[project]
name = "openlp"
description = "Open source Church presentation and lyrics projection application."
license = "GPL-3.0-or-later"
keywords = ["open", "source", "church", "presentation", "lyrics", "projection", "song", "bible", "display", "project"]
version = "3.1.2.dev176+f3d2d3a92"
dynamic = ["classifiers"]
readme = "README.rst"
authors = [{name = "Raoul Snyman", email = "raoulsnyman@openlp.org"}]
requires-python = '>=3.9,<3.13'
dependencies = ['alembic', 'beautifulsoup4', 'chardet', 'dbus-python ; platform_system == "Linux"', 'distro ; platform_system == "Linux"', 'flask', 'flask-cors', 'lxml', 'Mako', 'packaging', 'platformdirs', 'PyICU', 'pyobjc ; platform_system == "Darwin"', 'pyobjc-framework-Cocoa ; platform_system == "Darwin"', 'PySide6 (>=6.8)', 'Pyro5 ; platform_system == "Darwin"', 'pywin32 ; platform_system == "Windows"', 'QtAwesome', 'qrcode', 'requests', 'SQLAlchemy', 'waitress', 'websockets']

[project.urls]
homepage = "https://openlp.org/"
repository = "https://github.com/OpenLP/OpenLP"

[project.scripts]
openlp = "openlp.__main__:start"

[project.optional-dependencies]
darkstyle = ['QDarkStyle']
mysql = ['PyMySQL']
odbc = ['pyodbc']
postgresql = ['psycopg2_binary']
spellcheck = ['pyenchant']
sword-bibles = ['pysword']
